<resources>
    <string name="app_name">SidheshNaikTenTwentyAssignment</string>
    <string name="book_button_text">BOOK</string>
    <string name="adult_text">Adult</string>
    <string name="non_adult_text">Non Adult</string>
    <string name="genres_text">Genres</string>
    <string name="date_text">Date</string>
    <string name="overview_text">Overview</string>
    <string name="watch_trailer_button_text">Watch Trailer</string>
    <string name="done_text">Done</string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_cinema">Choose Cinema</string>
    <string name="choose_seat">Choose Seat</string>
    <string name="selected_seats">Selected Seats: </string>
</resources>
