<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/value_10dp"
    tools:context=".ui.ticketbookscreen.TicketBookingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/value_10dp"
            android:text="@string/choose_location"
            android:textColor="@color/background800"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/location_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_blue_200"
            android:gravity="center"
            android:hint="@string/choose_location"
            android:padding="10dp"
            android:textColor="@color/white_93"
            android:textColorHint="@color/white_70"
            android:textSize="14.5sp"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_divider_color="@color/white_70"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.4dp"
            app:spinner_item_array="@array/array_states"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@color/background800"
            app:spinner_popup_elevation="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_20dp"
            android:text="@string/choose_cinema"
            android:textColor="@color/background800"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/cinema_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_10dp"
            android:background="@color/md_blue_200"
            android:gravity="center"
            android:hint="@string/choose_cinema"
            android:padding="10dp"
            android:textColor="@color/white_93"
            android:textColorHint="@color/white_70"
            android:textSize="14.5sp"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_divider_color="@color/white_70"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.4dp"
            app:spinner_item_array="@array/array_cinema"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@color/background800"
            app:spinner_popup_elevation="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_20dp"
            android:text="@string/choose_seat"
            android:textColor="@color/background800"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/seat_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_10dp"
            android:background="@color/md_blue_200"
            android:gravity="center"
            android:hint="@string/choose_seat"
            android:padding="10dp"
            android:textColor="@color/white_93"
            android:textColorHint="@color/white_70"
            android:textSize="14.5sp"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_divider_color="@color/white_70"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.4dp"
            app:spinner_item_array="@array/array_booking_seat"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@color/background800"
            app:spinner_popup_elevation="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_seats"
                android:textColor="@color/background800"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/selected_seats_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/value_10dp"
                android:textColor="@color/md_blue_200"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/movie_seat_booking_image"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_20dp"
            android:layout_marginBottom="@dimen/value_10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/book_button_text"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>